--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -62,10 +62,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 - 9.999999999999981e-11\n",
+      "1 - 8.999999999999986e-09\n",
+      "2 - 3.644999999999997e-07\n",
+      "3 - 8.747999999999995e-06\n",
+      "4 - 0.00013778099999999982\n",
+      "5 - 0.0014880347999999988\n",
+      "6 - 0.011160261000000001\n",
+      "7 - 0.05739562799999998\n",
+      "8 - 0.1937102445\n",
+      "9 - 0.387420489\n",
+      "10 - 0.3486784401000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    "n = 10\n",
+    "p = 0.9\n",
+    "\n",
+    "for k in range(n + 1):\n",
+    "    probability = binom.pmf(k, n, p)\n",
+    "    print(\"{0} - {1}\".format(k, probability))"
+   ]
   }
  ],
  "metadata": {
