added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -93,6 +93,30 @@
     "    probability = binom.pmf(k, n, p)\n",
     "    print(\"{0} - {1}\".format(k, probability))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7748409780000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "a = 8\n",
+    "b = 2\n",
+    "\n",
+    "p = beta.cdf(.90, a, b)\n",
+    "\n",
+    "print(p)"
+   ]
   }
  ],
  "metadata": {
