added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -117,6 +117,29 @@
     "\n",
     "print(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.22515902199999982\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "a = 8\n",
+    "b = 2\n",
+    "\n",
+    "p = 1.0 - beta.cdf(.90, a, b)\n",
+    "print(p)"
+   ]
   }
  ],
  "metadata": {
