added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -119,6 +119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### So according to our calculation, there is a 77.48% chance the underlying probability of success is 90% or less."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -139,6 +146,13 @@
     "\n",
     "p = 1.0 - beta.cdf(.90, a, b)\n",
     "print(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### This means that out of 8/10 successful engine tests, there is only a 22.5% chance the underlying success rate is 90% or greater."
    ]
   }
  ],
