added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -154,6 +154,54 @@
    "source": [
     "#### This means that out of 8/10 successful engine tests, there is only a 22.5% chance the underlying success rate is 90% or greater."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13163577484183697\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "a = 30\n",
+    "b = 6\n",
+    "\n",
+    "p = 1.0 - beta.cdf(.90, a, b)\n",
+    "\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.33863336199999994\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "a = 8\n",
+    "b = 2\n",
+    "\n",
+    "p = beta.cdf(.90, a, b) - beta.cdf(.80, a, b)\n",
+    "\n",
+    "print(p)"
+   ]
   }
  ],
  "metadata": {
