--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -202,6 +202,55 @@
     "\n",
     "print(p)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1:\n",
+    "\n",
+    "##### There is a 30% chance of rain today, and a 40% chance your umbrella order will arrive on time. You are eager to walk in the rain today and cannot do so without either! What is the probability it will rain AND your umbrella will arrive?\n",
+    "\n",
+    "- P(Rain) = 0.30%\n",
+    "- P(umbrella) = 0.40%\n",
+    "- P(Rain AND Umbrella) = Joint Probability  P(rain) * P(umbrella)\n",
+    "- Joint Probabilities = P(A AND B) = P(A) * P(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.12"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rain = 0.30\n",
+    "umbrella = 0.40\n",
+    "\n",
+    "umbrella * rain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
