added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -243,7 +243,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### This is known as the sum rule of probability and ensures every joint event is counted only once:\n",
+    "- P(A OR B) = P(A) + P(B) - P(A AND B)"
+   ]
   },
   {
    "cell_type": "code",
