added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -249,11 +249,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercise 2\n",
+    "#### There is a 30% chance of rain today, and a 40% chance your umbrella order will arrive on time. You will be able to run errands only if it does not rain or your umbrella arrives. What is the probability it will not rain OR your umbrella arrives?\n",
+    "\n",
+    "- P(Not Rain) = 0.70%\n",
+    "- P(Umbrella) = 0.40%\n",
+    "- P(Umbrella OR Not Rain) = 0.70 + 0.40 - (0.70 * 0.40)"
+   ]
   }
  ],
  "metadata": {
