--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -281,11 +281,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercise 3\n",
+    "#### There is a 30% chance of rain today, and a 40% chance your umbrella order will arrive on time. However, you found out if it rains there is only a 20% chance your umbrella will arrive on time. What is the probability it will rain AND your umbrella will arrive on time?\n",
+    "\n",
+    "- P(rain) = 0.30\n",
+    "- p(umbrella) = 0.40\n",
+    "- P(umbrella | rain) = 0.20\n",
+    "- P(Rain AND Umbrella) =  P(umbrella | Rain) * P(Rain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.20 * 0.30 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4\n",
+    "\n",
+    "#### You have 137 passengers booked on a flight from Las Vegas to Dallas. However, it is Las Vegas on a Sunday morning and you estimate each passenger is 40% likely to not show up. You are trying to figure out how many seats to overbook so the plane does not fly empty. How likely is it at least 50 passengers will not show up?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that at least 50 passengers will not show up is: 0.8221\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    "n = 137  # Total number of passengers\n",
+    "p = 0.40  # Probability of a passenger not showing up\n",
+    "\n",
+    "# We want the probability of having at least 50 passengers not show up\n",
+    "k = 50\n",
+    "\n",
+    "# Calculating P(X >= 50)\n",
+    "# Since CDF gives P(X <= k), we use 1 - P(X <= k-1) to get P(X >= k)\n",
+    "probability_at_least_50 = 1 - binom.cdf(k-1, n, p)\n",
+    "\n",
+    "print(f\"The probability that at least 50 passengers will not show up is: {probability_at_least_50:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
