added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Probability.ipynb
@@ -350,6 +350,39 @@
     "\n",
     "print(f\"The probability that at least 50 passengers will not show up is: {probability_at_least_50:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 5\n",
+    "#### You flipped a coin 10 times and got heads 8 times and tails 2 times. Do you think this coin has any good probability of being fair? Why or why not?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.98046875"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import beta\n",
+    "\n",
+    "a = 8\n",
+    "b = 2\n",
+    "\n",
+    "1 - beta.cdf(.50, a, b)"
+   ]
   }
  ],
  "metadata": {
