added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
@@ -17,6 +17,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## COEFFICIENT OF VARIATION\n",
+    "#### A helpful tool for measuring spread is the coefficient of variation. It compares two distributions and quantifies how spread out each of them is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
