added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
@@ -25,6 +25,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Confidence Intervals\n",
+    "\n",
+    "#### You may have heard the term “confidence interval,” which often confuses statistics newcomers and students. A confidence interval is a range calculation showing how confidently we believe a sample mean (or other parameter) falls in a range for the population mean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
