--- a/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
@@ -28,12 +28,53 @@
    "source": [
     "## Confidence Intervals\n",
     "\n",
-    "#### You may have heard the term “confidence interval,” which often confuses statistics newcomers and students. A confidence interval is a range calculation showing how confidently we believe a sample mean (or other parameter) falls in a range for the population mean."
+    "#### You may have heard the term “confidence interval,” which often confuses statistics newcomers and students. A confidence interval is a range calculation showing how confidently we believe a sample mean (or other parameter) falls in a range for the population mean.\n",
+    "\n",
+    "#### One interesting thing to note here too is that in our margin of error formula, the larger n becomes, the narrower our confidence interval becomes! This makes sense because if we have a larger sample, we are more confident in the population mean falling in a smaller range, hence why it’s called a confidence interval."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "#### A manufacturer says the Z-Phone smart phone has a mean consumer life of 42 months with a standard deviation of 8 months. Assuming a normal distribution, what is the probability a given random Z-Phone will last between 20 and 30 months?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.002979763235054555\n",
+      "0.06680720126885806\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "mean = 42\n",
+    "std = 8\n",
+    "\n",
+    "z_score1 = (20 - 42) / 8\n",
+    "z_score2 = (30 - 42) / 8\n",
+    "\n",
+    "prob_less_20 = norm.cdf(z_score1)\n",
+    "prob_less_30 = norm.cdf(z_score2)\n",
+    "\n",
+    "print(prob_less_20)\n",
+    "print(prob_less_30)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -44,7 +85,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
