added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
@@ -43,15 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.002979763235054555\n",
-      "0.06680720126885806\n"
+      "0.0638274380338035\n"
      ]
     }
    ],
@@ -66,8 +65,7 @@
     "prob_less_20 = norm.cdf(z_score1)\n",
     "prob_less_30 = norm.cdf(z_score2)\n",
     "\n",
-    "print(prob_less_20)\n",
-    "print(prob_less_30)\n"
+    "print(prob_less_30 - prob_less_20)\n"
    ]
   },
   {
