added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
@@ -69,10 +69,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Exercise 3:\n",
+    "#### I am skeptical that my 3D printer filament is not 1.75 mm in average diameter as advertised. I sampled 34 measurements with my tool. The sample mean is 1.715588 and the sample standard deviation is 0.029252. What is the 99% confidence interval for the mean of my entire spool of filament?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99% Confidence Interval: (1.7018760349925839, 1.729299965007416)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import t\n",
+    "import numpy as np\n",
+    "\n",
+    "# Given values\n",
+    "n = 34\n",
+    "mean = 1.715588\n",
+    "std_dev = 0.029252\n",
+    "confidence_level = 0.99\n",
+    "\n",
+    "# Degrees of freedom\n",
+    "df = n - 1\n",
+    "\n",
+    "# t-critical value for 99% confidence level\n",
+    "t_critical = t.ppf((1 + confidence_level) / 2, df)\n",
+    "\n",
+    "# Standard error of the mean\n",
+    "sem = std_dev / np.sqrt(n)\n",
+    "\n",
+    "# Confidence interval calculation\n",
+    "margin_of_error = t_critical * sem\n",
+    "confidence_interval = (mean - margin_of_error, mean + margin_of_error)\n",
+    "\n",
+    "print(f\"99% Confidence Interval: {confidence_interval}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What Does Standard Error Tell Us?\n",
+    "\n",
+    "#### Standard error measures the dispersion or variability of the sample mean from the population mean. It tells us how much the sample mean would vary from the true population mean if you were to repeat the experiment multiple times under the same conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is Margin of Error?\n",
+    "#### Margin of error in a confidence interval calculation represents the extent of the interval on either side of the sample mean, indicating the precision of our estimate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
