added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Descriptive-Inferential.ipynb
@@ -135,6 +135,53 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Exercise 4\n",
+    "\n",
+    "#### Your marketing department has started a new advertising campaign and wants to know if it affected sales, which in the past averaged $10,345 a day with a standard deviation of $552. The new advertising campaign ran for 45 days and averaged $11,641 in sales. Did the campaign affect sales? Why or why not? (Use a two-tailed test for more reliable significance.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two-tailed P-value 0.01888333596496139\n",
+      "Passes two-tailed test\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "\n",
+    "mean = 10345\n",
+    "std_dev = 552\n",
+    "\n",
+    "p1 = 1.0 - norm.cdf(11641, mean, std_dev)\n",
+    "\n",
+    "# Take advantage of symmetry\n",
+    "p2 = p1\n",
+    "\n",
+    "# P-value of both tails\n",
+    "# I could have also just multiplied by 2\n",
+    "p_value = p1 + p2\n",
+    "\n",
+    "print(\"Two-tailed P-value\", p_value)\n",
+    "if p_value <= .05:\n",
+    "    print(\"Passes two-tailed test\")\n",
+    "else:\n",
+    "    print(\"Fails two-tailed test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
