added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Linear-Algebra.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Linear-Algebra.ipynb
@@ -9,6 +9,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, -3])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "v = [1,2]\n",
+    "i = np.array([-2, 1])\n",
+    "j = np.array([1, -2])\n",
+    "\n",
+    "(v[0] * i.T) + (v[1] * j.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -22,7 +47,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
