added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/Linear-Algebra.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/Linear-Algebra.ipynb
@@ -33,6 +33,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A transformation i lands at [1, 0] and  lands at [2, 2]. What is the determinant of this transformation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "A = np.array([[1,0], [2,2]]).T\n",
+    "\n",
+    "np.linalg.det(A)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
