added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -59,6 +59,44 @@
     "plt.plot(X, m*X+b) # line\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.93939394 4.73333333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from numpy.linalg import inv\n",
+    "import numpy as np\n",
+    "\n",
+    "# Import points\n",
+    "df = pd.read_csv('https://bit.ly/3goOAnt', delimiter=\",\")\n",
+    "\n",
+    "# Extract input variables (all rows, all columns but last column)\n",
+    "X = df.values[:, :-1].flatten()\n",
+    "\n",
+    "# Add placeholder \"1\" column to generate intercept\n",
+    "X_1 = np.vstack([X, np.ones(len(X))]).T\n",
+    "\n",
+    "# Extract output column (all rows, last column)\n",
+    "Y = df.values[:, -1]\n",
+    "\n",
+    "# Calculate coefficents for slope and intercept\n",
+    "b = inv(X_1.transpose() @ X_1) @ (X_1.transpose() @ Y)\n",
+    "print(b) # [1.93939394, 4.73333333]\n",
+    "\n",
+    "# Predict against the y-values\n",
+    "y_predict = X_1.dot(b)"
+   ]
   }
  ],
  "metadata": {
