added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -97,6 +97,59 @@
     "# Predict against the y-values\n",
     "y_predict = X_1.dot(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.93939394 4.73333333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from numpy.linalg import qr, inv\n",
+    "import numpy as np\n",
+    "\n",
+    "# Import points\n",
+    "df = pd.read_csv('https://bit.ly/3goOAnt', delimiter=\",\")\n",
+    "\n",
+    "# Extract input variables (all rows, all columns but last column)\n",
+    "X = df.values[:, :-1].flatten()\n",
+    "\n",
+    "# Add placeholder \"1\" column to generate intercept\n",
+    "X_1 = np.vstack([X, np.ones(len(X))]).transpose()\n",
+    "\n",
+    "# Extract output column (all rows, last column)\n",
+    "Y = df.values[:, -1]\n",
+    "\n",
+    "# calculate coefficents for slope and intercept\n",
+    "# using QR decomposition\n",
+    "Q, R = qr(X_1)\n",
+    "b = inv(R).dot(Q.transpose()).dot(Y)\n",
+    "\n",
+    "print(b) # [1.93939394, 4.73333333]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent\n",
+    "\n",
+    "#### Gradient descent is an optimization technique that uses derivatives and iterations to minimize/maximize a set of parameters against an objective. To learn about gradient descent, let’s do a quick thought experiment and then apply it on a simple example.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
