added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -147,9 +147,118 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.2621571628540997 2.262157162854099\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import t\n",
+    "\n",
+    "n = 10\n",
+    "lower_cv = t(n-1).ppf(.025)\n",
+    "upper_cv = t(n-1).ppf(.975)\n",
+    "\n",
+    "print(lower_cv, upper_cv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST VALUE: 9.399564671312076\n",
+      "CRITICAL RANGE: -2.2621571628540997, 2.262157162854099\n",
+      "CORRELATION PROVEN, REJECT H0\n",
+      "P-VALUE: 5.9763860877914965e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import t\n",
+    "from math import sqrt\n",
+    "\n",
+    "# sample size\n",
+    "n = 10\n",
+    "\n",
+    "lower_cv = t(n-1).ppf(.025)\n",
+    "upper_cv = t(n-1).ppf(.975)\n",
+    "\n",
+    "# correlation coefficient\n",
+    "# derived from data https://bit.ly/2KF29Bd\n",
+    "r = 0.957586\n",
+    "\n",
+    "# Perform the test\n",
+    "test_value = r / sqrt((1-r**2) / (n-2))\n",
+    "\n",
+    "print(\"TEST VALUE: {}\".format(test_value))\n",
+    "print(\"CRITICAL RANGE: {}, {}\".format(lower_cv, upper_cv))\n",
+    "\n",
+    "if test_value < lower_cv or test_value > upper_cv:\n",
+    "    print(\"CORRELATION PROVEN, REJECT H0\")\n",
+    "else:\n",
+    "    print(\"CORRELATION NOT PROVEN, FAILED TO REJECT H0 \")\n",
+    "\n",
+    "# Calculate p-value\n",
+    "if test_value > 0:\n",
+    "    p_value = 1.0 - t(n-1).cdf(test_value)\n",
+    "else:\n",
+    "    p_value = t(n-1).cdf(test_value)\n",
+    "\n",
+    "# Two-tailed, so multiply by 2\n",
+    "p_value = p_value * 2\n",
+    "print(\"P-VALUE: {}\".format(p_value))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Coefficient of Determination\n",
+    "#### Let’s learn an important metric you will see a lot in statistics and machine learning regressions. The coefficient of determination, called 𝑟2, measures how much variation in one variable is explainable by the variation of the other variable. It is also the square of the correlation coefficient 𝑟. As 𝑟 approaches a perfect correlation (–1 or 1), 𝑟2 approaches 1. Essentially, 𝑟2 shows how much two variables interact with each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          x         y\n",
+      "x  1.000000  0.916971\n",
+      "y  0.916971  1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read data into Pandas dataframe\n",
+    "df = pd.read_csv('https://bit.ly/2KF29Bd', delimiter=\",\")\n",
+    "\n",
+    "# Print correlations between variables\n",
+    "coeff_determination = df.corr(method='pearson') ** 2\n",
+    "print(coeff_determination)\n",
+    "\n",
+    "# OUTPUT:\n",
+    "#           x         y\n",
+    "# x  1.000000  0.916971\n",
+    "# y  0.916971  1.000000"
+   ]
   }
  ],
  "metadata": {
