--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -259,6 +259,90 @@
     "# x  1.000000  0.916971\n",
     "# y  0.916971  1.000000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.46251687560351 25.966483124396493\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import t\n",
+    "from math import sqrt\n",
+    "\n",
+    "# Load the data\n",
+    "points = list(pd.read_csv('https://bit.ly/2KF29Bd', delimiter=\",\").itertuples())\n",
+    "\n",
+    "n = len(points)\n",
+    "\n",
+    "# Linear Regression Line\n",
+    "m = 1.939\n",
+    "b = 4.733\n",
+    "\n",
+    "# Calculate Prediction Interval for x = 8.5\n",
+    "x_0 = 8.5\n",
+    "x_mean = sum(p.x for p in points) / len(points)\n",
+    "\n",
+    "t_value = t(n - 2).ppf(.975)\n",
+    "\n",
+    "standard_error = sqrt(sum((p.y - (m * p.x + b)) ** 2 for p in points) / (n - 2))\n",
+    "\n",
+    "margin_of_error = t_value * standard_error * \\\n",
+    "                  sqrt(1 + (1 / n) + (n * (x_0 - x_mean) ** 2) / \\\n",
+    "                       (n * sum(p.x ** 2 for p in points) - \\\n",
+    "                            sum(p.x for p in points) ** 2))\n",
+    "\n",
+    "predicted_y = m*x_0 + b\n",
+    "\n",
+    "# Calculate prediction interval\n",
+    "print(predicted_y - margin_of_error, predicted_y + margin_of_error)\n",
+    "# 16.462516875955465 25.966483124044537"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r^2: 0.993\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load the data\n",
+    "df = pd.read_csv('https://bit.ly/3cIH97A', delimiter=\",\")\n",
+    "\n",
+    "# Extract input variables (all rows, all columns but last column)\n",
+    "X = df.values[:, :-1]\n",
+    "\n",
+    "# Extract output column (all rows, last column)\n",
+    "Y = df.values[:, -1]\n",
+    "\n",
+    "# Separate training and testing data\n",
+    "# This leaves a third of the data out for testing\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=1/3)\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, Y_train)\n",
+    "result = model.score(X_test, Y_test)\n",
+    "print(\"r^2: %.3f\" % result)"
+   ]
   }
  ],
  "metadata": {
