added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -343,6 +343,78 @@
     "result = model.score(X_test, Y_test)\n",
     "print(\"r^2: %.3f\" % result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99337354 0.99345032 0.99251425]\n",
+      "MSE: mean=0.993 (stdev-0.000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "\n",
+    "df = pd.read_csv('https://bit.ly/3cIH97A', delimiter=\",\")\n",
+    "\n",
+    "# Extract input variables (all rows, all columns but last column)\n",
+    "X = df.values[:, :-1]\n",
+    "\n",
+    "# Extract output column (all rows, last column)\\\n",
+    "Y = df.values[:, -1]\n",
+    "\n",
+    "# Perform a simple linear regression\n",
+    "kfold = KFold(n_splits=3, random_state=7, shuffle=True)\n",
+    "model = LinearRegression()\n",
+    "results = cross_val_score(model, X, Y, cv=kfold)\n",
+    "print(results)\n",
+    "print(\"MSE: mean=%.3f (stdev-%.3f)\" % (results.mean(), results.std()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.82514286 0.23552344 0.92653455 0.91620594 0.73260142 0.8698865\n",
+      " 0.55254014 0.89593526 0.91570078 0.82086621]\n",
+      "mean=0.769 (stdev-0.208)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score, ShuffleSplit\n",
+    "\n",
+    "df = pd.read_csv('https://bit.ly/38XwbeB', delimiter=\",\")\n",
+    "\n",
+    "# Extract input variables (all rows, all columns but last column)\n",
+    "X = df.values[:, :-1]\n",
+    "\n",
+    "# Extract output column (all rows, last column)\\\n",
+    "Y = df.values[:, -1]\n",
+    "\n",
+    "# Perform a simple linear regression\n",
+    "kfold = ShuffleSplit(n_splits=10, test_size=.33, random_state=7)\n",
+    "model = LinearRegression()\n",
+    "results = cross_val_score(model, X, Y, cv=kfold)\n",
+    "\n",
+    "print(results)\n",
+    "print(\"mean=%.3f (stdev-%.3f)\" % (results.mean(), results.std()))"
+   ]
   }
  ],
  "metadata": {
