added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -415,6 +415,77 @@
     "print(results)\n",
     "print(\"mean=%.3f (stdev-%.3f)\" % (results.mean(), results.std()))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "#### Perform a simple linear regression to find the m and b values that minimizes the loss (sum of squares)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m = 1.759193148105248\n",
+      "b = 4.69359654825405\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"https://bit.ly/3C8JzrM\")\n",
+    "\n",
+    "\n",
+    "X = df.values[:, :-1]\n",
+    "y = df.values[:, -1]\n",
+    "\n",
+    "fit = LinearRegression().fit(X, y)\n",
+    "\n",
+    "m = fit.coef_.flatten()[0]\n",
+    "b = fit.intercept_.flatten()[0]\n",
+    "print(\"m = {0}\".format(m))\n",
+    "print(\"b = {0}\".format(b))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum Of Squares: 42719.84974651069\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"https://bit.ly/3C8JzrM\").itertuples()\n",
+    "\n",
+    "sum_of_squares = 0.0\n",
+    "for val in df:\n",
+    "  y_actual = val.y\n",
+    "  y_predict = m * val.x + b\n",
+    "  residual = y_actual - y_predict\n",
+    "  residual_squared = (residual)**2\n",
+    "  sum_of_squares += residual_squared\n",
+    "\n",
+    "print(f\"Sum Of Squares: {sum_of_squares}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
