added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -61,6 +61,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## M\n",
+    "\n",
+    "#### m: Slope of the regression line. It represents the change in y for a one-unit change in 𝑥. In other words, it quantifies the relationship between the independent variable and the dependent variable. It tells you how much y increases or decreases when x increases by one unit.\n",
+    "\n",
+    "## B\n",
+    "#### Intercept of the regression line. It is the predicted value of y when x is zero. It’s where the line crosses the y-axis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
