added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -587,6 +587,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST VALUE: 6.845161076596911\n",
+      "CRITICAL RANGE: -2.2621571628540997, 2.262157162854099\n",
+      "CORRELATION PROVEN, REJECT H0\n",
+      "P-VALUE: 7.514012525766667e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = correlations[\"y\"][\"x\"]\n",
+    "\n",
+    "test_value = r / sqrt((1 - r ** 2) / (n - 2))\n",
+    "\n",
+    "print(\"TEST VALUE: {}\".format(test_value))\n",
+    "print(\"CRITICAL RANGE: {}, {}\".format(lower_cv, upper_cv))\n",
+    "\n",
+    "if test_value < lower_cv or test_value > upper_cv:\n",
+    "    print(\"CORRELATION PROVEN, REJECT H0\")\n",
+    "else:\n",
+    "    print(\"CORRELATION NOT PROVEN, FAILED TO REJECT H0 \")\n",
+    "\n",
+    "# Calculate p-value\n",
+    "if test_value > 0:\n",
+    "    p_value = 1.0 - t(n - 1).cdf(test_value)\n",
+    "else:\n",
+    "    p_value = t(n - 1).cdf(test_value)\n",
+    "\n",
+    "# Two-tailed, so multiply by 2\n",
+    "p_value = p_value * 2\n",
+    "print(\"P-VALUE: {}\".format(p_value))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
