added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -626,6 +626,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "##### If I predict where x = 50, what is the 95% prediction interval for the predicted value of y?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
