added new models

--- a/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
+++ b/Mathematics/Statistics/Essential-Math-Data-Science/regression.ipynb
@@ -635,10 +635,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.7920864989629 134.5144216010371\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import t\n",
+    "from math import sqrt\n",
+    "\n",
+    "# Load the data\n",
+    "points = list(pd.read_csv('https://bit.ly/3C8JzrM', delimiter=\",\") \\\n",
+    "    .itertuples())\n",
+    "\n",
+    "n = len(points)\n",
+    "\n",
+    "# Linear Regression Line\n",
+    "m = 1.75919315\n",
+    "b = 4.69359655\n",
+    "\n",
+    "# Calculate Prediction Interval for x = 50\n",
+    "x_0 = 50\n",
+    "x_mean = sum(p.x for p in points) / len(points)\n",
+    "\n",
+    "t_value = t(n - 2).ppf(.975)\n",
+    "\n",
+    "standard_error = sqrt(sum((p.y - (m * p.x + b)) ** 2 for p in points) / \\\n",
+    "    (n - 2))\n",
+    "\n",
+    "margin_of_error = t_value * standard_error * \\\n",
+    "                  sqrt(1 + (1 / n) + (n * (x_0 - x_mean) ** 2) / \\\n",
+    "                       (n * sum(p.x ** 2 for p in points) - \\\n",
+    "\tsum(p.x for p in points) ** 2))\n",
+    "\n",
+    "predicted_y = m*x_0 + b\n",
+    "print(predicted_y - margin_of_error, predicted_y + margin_of_error)"
+   ]
   }
  ],
  "metadata": {
