added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "- savg = total distance/ change in t\n",
     "\n",
-    "#### Because average speed does not include direction, it lacks any algebraic sign. Sometimes savg is the same (except for the absence of a sign) as νavg. "
+    "#### Because average speed does not include direction, it lacks any algebraic sign. Sometimes savg is the same (except for the absence of a sign) as νavg. \n",
+    "\n",
+    "#### The Key Idea here is that your average speed is the ratio of the total distance you move to the total time interval you take to make that move."
    ]
   },
   {
