added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -30,7 +30,11 @@
     "\n",
     "#### The velocity at any instant is obtained from the average velocity by shrinking the time interval Δt closer and closer to 0. As Δt dwindles, the average velocity approaches a limiting value, which is the velocity at that instant:\n",
     "\n",
-    "- v = lim change in t -> 0 (change x/ change in t) = dx/ dt"
+    "- v = lim change in t -> 0 (change x/ change in t) = dx/ dt\n",
+    "\n",
+    "#### This equation displays two features of the instantaneous velocity ν. First, ν is the rate at which the particle’s position x is changing with time at a given instant; that is, ν is the derivative of x with respect to t. Second, ν at any instant is the slope of the particle’s position–time curve at the point representing that instant. Velocity is another vector quantity and thus has an associated direction.\n",
+    "\n",
+    "#### Speed is the magnitude of velocity; that is, speed is velocity that has been stripped of any indication of direction, either in words or via an algebraic sign. (Caution: Speed and average speed can be quite different.) A velocity of +5 m/s and one of −5 m/s both have an associated speed of 5 m/s. The speedometer in a car measures speed, not velocity (it cannot determine the direction)."
    ]
   },
   {
