added new models

--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -38,6 +38,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.2 - 6.3*x**2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "x = sp.symbols(\"x\")\n",
+    "\n",
+    "f = 7.8 + 9.2*x - 2.1*x**3\n",
+    "\n",
+    "derivative_f = sp.diff(f, x)\n",
+    "print(derivative_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle -67.975$"
+      ],
+      "text/plain": [
+       "-67.9750000000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "derivative_f.subs(x, 3.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### At t = 3.5 s, the particle is moving in the negative direction of x (note the minus sign) with a speed of 68 m/s. Since the quantity t appears in Eq. 2-6, the velocity ν depends on t and so is continuously changing."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -50,7 +104,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
