--- a/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
+++ b/Physics/Essential-Physics/Motion-Of-A-Line.ipynb
@@ -94,6 +94,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Acceleration\n",
+    "#### When a particle’s velocity changes, the particle is said to undergo acceleration (or to accelerate). For motion along an axis, the average acceleration aavg over a time interval Δt is\n",
+    "\n",
+    "- a avg = v2- v1 / t2-t1 = change in v/ change in t\n",
+    "\n",
+    "#### where the particle has velocity ν1 at time t1 and then velocity ν2 at time t2. The instantaneous acceleration (or simply acceleration) is the derivative of the velocity with respect to time:\n",
+    "- a = dv/dt\n",
+    "\n",
+    "#### In words, the acceleration of a particle at any instant is the rate at which its velocity is changing at that instant. Graphically, the acceleration at any point is the slope of the curve of ν(t) at that point.\n",
+    "- a = dv/dt = d/dt (dx/dt) = d^2x/dt^2\n",
+    "\n",
+    "#### In words, the acceleration of a particle at any instant is the second derivative of its position x(t) with respect to time.\n",
+    "\n",
+    "#### A common unit of acceleration is the meter per second per second: m/(s · s) or m/s2. You will see other units in the problems, but they will each be in the form of length/(time · time) or length/time2. Acceleration has both magnitude and direction (it is yet another vector quantity). Its algebraic sign represents its direction on an axis just as for displacement and velocity; that is, acceleration with a positive value is in the positive direction of an axis, and acceleration with a negative value is in the negative direction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
